# WoodFlow

./: .bazelrc  .clang-tidy  .clang-tidy-fast  .clangd  .gitignore  .pre-commit-config.yaml  BUILD.bazel  LICENSE  MODULE.bazel  README.md  clang-native.ini  meson.build  meson_options.txt
.devcontainer/: devcontainer.json
.github/: copilot-instructions.md
.github/workflows/: ci.yml  docker-build.yml
docker/: Dockerfile
subprojects/: mp-units.wrap
subprojects/packagefiles/mp-units/: meson.build
tests/: meson.build  test_core.cpp  test_example.cpp
woodflow/: BUILD.bazel  meson.build  woodflow.cpp
woodflow/core/: BUILD.bazel  core.cpp  core.hpp  core_test.cpp  meson.build
woodflow/io/: BUILD.bazel  io.cpp  io.hpp  io_test.cpp  meson.build
