load("@hedron_compile_commands//:refresh_compile_commands.bzl", "refresh_compile_commands")

package(default_visibility = ["//visibility:public"])

# Make .clang-tidy configs available to linters
exports_files([
    ".clang-tidy",
    ".clang-tidy-fast",
])

refresh_compile_commands(
    name = "refresh_compile_commands",
    targets = {
        "//...": "",
    },
)
