module(
    name = "woodflow",
    version = "0.0.1",
    bazel_compatibility = [
        ">=8.4.2",
    ],
)

bazel_dep(name = "rules_cc", version = "0.2.11")
bazel_dep(name = "toolchains_llvm", version = "1.5.0")
bazel_dep(name = "rules_python", version = "1.6.3")

bazel_dep(name = "googletest", version = "1.17.0.bcr.1", dev_dependency = True)
bazel_dep(name = "hedron_compile_commands", dev_dependency = True)

# Explicitly manage LLVM toolchain version.
llvm = use_extension("@toolchains_llvm//toolchain/extensions:llvm.bzl", "llvm")
llvm.toolchain(
    name = "llvm_toolchain",
    llvm_version = "21.1.0",
)
use_repo(llvm, "llvm_toolchain", "llvm_toolchain_llvm")

register_toolchains("@llvm_toolchain//:all")

# Explicitly manage hedron_compile_commands needed for clangd version.
git_override(
    module_name = "hedron_compile_commands",
    commit = "0e990032f3c5a866e72615cf67e5ce22186dcb97",
    remote = "https://github.com/hedronvision/bazel-compile-commands-extractor.git",
)

# Explicitly manage python version.
python = use_extension("@rules_python//python/extensions:python.bzl", "python")
python.toolchain(
    ignore_root_user_error = True,
    python_version = "3.11",
)
